# FuturamaAPI

./: README.md  docker-compose.yml
.github/workflows/: docker.yml
app/: Cargo.toml  Dockerfile
app/data/: characters.csv  characters.json  episodes.csv  episodes.json
app/migrations/: 0000_init.sql
app/src/: main.rs
app/src/app/: config.rs  db.rs  mod.rs
app/src/app/handlers/: characters.rs  episodes.rs  errors.rs  mod.rs
app/src/app/serializers/: mod.rs  models.rs  query.rs
app/src/app/templates/: characters.rs  episodes.rs  mod.rs
app/static/css/: index.css
app/static/js/: navbar.js
app/templates/: 404.html  500.html  base.html  index.html  navbar.html  pagination.html  search_form.html
app/templates/characters/: detail.html  list.html
app/templates/episodes/: detail.html  list.html
