[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
axum-client-ip = "0.6.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
